# instagram-feed-epublisher

./: .gitignore  README.md  instagram_to_epub.py  mypy.ini  plan.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pr-epub.yml  smoke.yml
.husky/: pre-commit
book_layout/: layout.css  layout.html
cliapp/: README.md  instagram_to_epub.py  pyproject.toml  requirements.txt
cliapp/app/: commands.py  config.py  housekeeping.py  utils.py
cliapp/src/: cli.py  housekeeping.py  instagram_to_epub.py
cliapp/src/epubkit/: builder.py
cliapp/src/instagram/: fetch.py
cliapp/src/instagram_feed_epublisher/: cli.py  housekeeping.py  instagram_to_epub.py
cliapp/src/instagram_feed_epublisher/epubkit/: builder.py
cliapp/src/instagram_feed_epublisher/instagram_client/: fetch.py
cliapp/tests/: conftest.py  test_commands.py  test_epub_builder.py  test_instagram_fetch.py  test_instagram_to_epub.py  test_layout_loading.py  test_utils.py
cliapp/tests/test_instagram_feed_epublisher/: test_commands.py  test_config.py  test_instagram_to_epub.py  test_layout_loading.py
cliapp/tests/test_instagram_feed_epublisher/test_instagram_client/: test_fetch.py  test_util.py
designdoc/: erDiagram.mmd  flowchart LR.mmd
designdoc/webapp/: designDoc.md
sample/fetch/: posts_data.json
scripts/: smoke_test.sh
src/app/: cli.py  commands.py  config.py  utils.py
src/epubkit/: builder.py
src/instagram/: fetch.py
src/make_epub_from_instagram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_commands.py  test_config.py  test_epub_builder.py  test_instagram_fetch.py  test_instagram_to_epub.py  test_layout_loading.py  test_sample_data.py  test_utils.py
webapp/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  sequenceDiagram.mmd  tsconfig.json  vitest.config.ts  vitest.setup.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/api/auth/[...all]/: route.ts
webapp/app/api/epub/: route.ts
webapp/app/api/instagram/media/: route.ts
webapp/certs/: localhost-key.pem  localhost.pem
webapp/e2e/: sso-button.spec.ts
webapp/scripts/: dev-https.mjs
webapp/server/: better-auth.db  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
webapp/server/app/: page.tsx
webapp/server/app/api/epub/: route.ts
webapp/server/app/api/instagram/media/: route.ts
webapp/server/src/lib/: auth-client.ts  auth.ts
webapp/server/src/lib/client/: instagram.test.ts  instagram.ts
webapp/server/src/lib/epub/: cover-renderer.ts  epub-builder.ts  media-downloader.ts  template-renderer.test.ts  template-renderer.ts  types.ts
webapp/server/src/lib/instagram/: filter-service.test.ts  filter-service.ts  graph-client.ts
webapp/server/src/types/: html-to-epub.d.ts
webapp/src/__fixtures__/: instagram-media.ts
webapp/src/lib/: auth.ts  logger.ts
webapp/src/lib/auth/: session-service.test.ts  session-service.ts
webapp/src/lib/client/: instagram.test.ts  instagram.ts
webapp/src/lib/epub/: cover-renderer.test.ts  cover-renderer.ts  epub-builder.test.ts  epub-builder.ts  media-downloader.test.ts  media-downloader.ts  template-renderer.test.ts  template-renderer.ts
webapp/src/lib/instagram/: filter-service.ts  graph-client.test.ts  graph-client.ts  types.ts
