[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram_feed_epublisher"
version = "0.1.0"
description = "Collect Instagram posts by hashtag or user and build an EPUB."
authors = [{ name = "Instagram Collector" }]
requires-python = ">=3.10"
dependencies = [
  "instaloader>=4.11",
  "EbookLib>=0.18",
  "Pillow>=10.0",
  "fire>=0.6",
]

[project.scripts]
instagram-to-epub = "instagram_feed_epublisher.cli:main"

[project.optional-dependencies]
# For tools that understand PEP 621 extras
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.12",
  "mypy>=1.8",
]

# Preferred by uv to declare groups
[dependency-groups]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
  "ruff>=0.14.14",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --strict-markers"
pythonpath = [ "src" ]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["instagram_feed_epublisher*"]
